add new TabBarController, remove old TabBarController

--- a/Dude-Money/Storyboards/Base.lproj/Main.storyboard
+++ b/Dude-Money/Storyboards/Base.lproj/Main.storyboard
@@ -1,117 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XyG-OR-Bt6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--Tab Bar Controller-->
-        <scene sceneID="mNE-WN-t4b">
-            <objects>
-                <tabBarController id="XyG-OR-Bt6" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P4L-RI-0Xu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="71b-Qh-lK6" kind="relationship" relationship="viewControllers" id="F4p-rL-WiI"/>
-                        <segue destination="ueu-OF-HYD" kind="relationship" relationship="viewControllers" id="aUE-SA-mfJ"/>
-                        <segue destination="cBa-G9-7oQ" kind="relationship" relationship="viewControllers" id="3SI-0Z-Ran"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="l3U-Vk-5v7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6" y="-17"/>
-        </scene>
-        <!--Özet-->
-        <scene sceneID="tRz-xB-xEx">
-            <objects>
-                <collectionViewController id="71b-Qh-lK6" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="5pM-Zs-kRK">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NaZ-VD-6aF">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bnY-8w-j8q">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MfT-Fb-BBA">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="71b-Qh-lK6" id="uqn-Hd-cYf"/>
-                            <outlet property="delegate" destination="71b-Qh-lK6" id="gmO-8s-bQl"/>
-                        </connections>
-                    </collectionView>
-                    <tabBarItem key="tabBarItem" title="Özet" id="wPa-Hp-2Hf">
-                        <imageReference key="image" image="chart.xyaxis.line" catalog="system" symbolScale="small"/>
-                        <imageReference key="selectedImage" image="chart.xyaxis.line" catalog="system" symbolScale="small"/>
-                    </tabBarItem>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1hk-5c-xok" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-817" y="711"/>
-        </scene>
-        <!--Arkadaşlar-->
-        <scene sceneID="Jmn-C3-dfQ">
-            <objects>
-                <viewController id="ueu-OF-HYD" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="DAp-cG-f4I">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Zzd-DD-6Ss"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Arkadaşlar" id="1HC-xX-QRS">
-                        <imageReference key="image" image="person.3" catalog="system" symbolScale="small"/>
-                        <imageReference key="selectedImage" image="person.3" catalog="system" symbolScale="small"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U6r-ne-Cf4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6" y="710"/>
-        </scene>
-        <!--Profil-->
-        <scene sceneID="wNs-tK-t0t">
-            <objects>
-                <viewController id="cBa-G9-7oQ" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ewf-Vr-4u8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="c1B-oU-PqR"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Profil" id="mTi-kO-KoP">
-                        <imageReference key="image" image="person.crop.square" catalog="system" symbolScale="small"/>
-                        <imageReference key="selectedImage" image="person.crop.square" catalog="system" symbolScale="small"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dp6-Vx-vFC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="778" y="710"/>
-        </scene>
-    </scenes>
-    <resources>
-        <image name="chart.xyaxis.line" catalog="system" width="128" height="101"/>
-        <image name="person.3" catalog="system" width="128" height="62"/>
-        <image name="person.crop.square" catalog="system" width="128" height="114"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
+    <scenes/>
 </document>
