--- a/Dude-Money/Storyboards/Base.lproj/Main.storyboard
+++ b/Dude-Money/Storyboards/Base.lproj/Main.storyboard
@@ -3,13 +3,13 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Tab Bar View Controller-->
         <scene sceneID="ozp-F0-CA3">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nC4-uM-l0u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="tabbarVC" id="GeA-dD-gAc" customClass="TabBarViewController" customModule="Dude_Money" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BE7-8n-KzB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -17,8 +17,100 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nC4-uM-l0u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2332" y="1139"/>
         </scene>
+        <!--Summary Table View Controller-->
+        <scene sceneID="Keu-kg-NzT">
+            <objects>
+                <tableViewController storyboardIdentifier="summaryVC" id="W8k-Il-sH1" customClass="SummaryTableViewController" customModule="Dude_Money" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="4kX-Pz-Ldv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryCell" rowHeight="200" id="hQh-Qf-Z33" customClass="BillTableViewCell" customModule="Dude_Money" customModuleProvider="target">
+                                <rect key="frame" x="20" y="49.5" width="374" height="200"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hQh-Qf-Z33" id="lz0-PG-kdK">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="200"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bakiyeniz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELA-4w-QLz">
+                                            <rect key="frame" x="155" y="20" width="64" height="17"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0TL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTJ-FC-m6C">
+                                            <rect key="frame" x="170.5" y="39" width="33" height="23"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                            <color key="textColor" systemColor="systemGreenColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ELA-4w-QLz" firstAttribute="top" secondItem="lz0-PG-kdK" secondAttribute="top" constant="20" symbolic="YES" id="EBr-On-2bs"/>
+                                        <constraint firstItem="YTJ-FC-m6C" firstAttribute="top" secondItem="ELA-4w-QLz" secondAttribute="bottom" constant="2" id="LoI-hD-Qwl"/>
+                                        <constraint firstItem="YTJ-FC-m6C" firstAttribute="centerX" secondItem="lz0-PG-kdK" secondAttribute="centerX" id="LwZ-tk-xDM"/>
+                                        <constraint firstItem="ELA-4w-QLz" firstAttribute="centerX" secondItem="lz0-PG-kdK" secondAttribute="centerX" id="bHG-Ps-FFz"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="billCell" rowHeight="60" id="aBH-Mg-hzl" customClass="BillTableViewCell" customModule="Dude_Money" customModuleProvider="target">
+                                <rect key="frame" x="20" y="249.5" width="374" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aBH-Mg-hzl" id="Ch3-33-QeE">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1254.56" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNv-2a-QBi">
+                                            <rect key="frame" x="311.5" y="23.5" width="42.5" height="13.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZY-n6-PhI">
+                                            <rect key="frame" x="63" y="23.5" width="28.5" height="13.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nad-NM-7NW">
+                                            <rect key="frame" x="20" y="11.5" width="35" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="35" id="RuG-6I-UK2"/>
+                                                <constraint firstAttribute="width" secondItem="Nad-NM-7NW" secondAttribute="height" multiplier="1:1" id="o8p-f8-tTH"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="oNv-2a-QBi" firstAttribute="centerY" secondItem="Ch3-33-QeE" secondAttribute="centerY" id="5r7-9Q-rEk"/>
+                                        <constraint firstItem="qZY-n6-PhI" firstAttribute="centerY" secondItem="Ch3-33-QeE" secondAttribute="centerY" id="7yd-kh-PdG"/>
+                                        <constraint firstItem="Nad-NM-7NW" firstAttribute="centerY" secondItem="Ch3-33-QeE" secondAttribute="centerY" id="EVv-6O-lvU"/>
+                                        <constraint firstItem="Nad-NM-7NW" firstAttribute="leading" secondItem="Ch3-33-QeE" secondAttribute="leading" constant="20" symbolic="YES" id="F7k-oe-7Es"/>
+                                        <constraint firstItem="qZY-n6-PhI" firstAttribute="leading" secondItem="Nad-NM-7NW" secondAttribute="trailing" constant="8" symbolic="YES" id="GD4-S1-Qxx"/>
+                                        <constraint firstAttribute="trailing" secondItem="oNv-2a-QBi" secondAttribute="trailing" constant="20" symbolic="YES" id="Q2j-Z9-GuP"/>
+                                        <constraint firstItem="oNv-2a-QBi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qZY-n6-PhI" secondAttribute="trailing" constant="8" symbolic="YES" id="bfY-nZ-hEp"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="W8k-Il-sH1" id="wBX-x9-qc5"/>
+                            <outlet property="delegate" destination="W8k-Il-sH1" id="0Vg-3i-cK7"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wbi-28-mqh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1375.3623188405797" y="1137.7232142857142"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
