--- a/Dude-Money/Storyboards/Base.lproj/Main.storyboard
+++ b/Dude-Money/Storyboards/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryCell" rowHeight="200" id="hQh-Qf-Z33" customClass="BillTableViewCell" customModule="Dude_Money" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryCell" rowHeight="200" id="hQh-Qf-Z33" customClass="SummaryTableViewCell" customModule="Dude_Money" customModuleProvider="target">
                                 <rect key="frame" x="20" y="49.5" width="374" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hQh-Qf-Z33" id="lz0-PG-kdK">
@@ -37,25 +37,46 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bakiyeniz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELA-4w-QLz">
-                                            <rect key="frame" x="155" y="20" width="64" height="17"/>
+                                            <rect key="frame" x="155" y="20" width="64.5" height="17"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0TL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTJ-FC-m6C">
-                                            <rect key="frame" x="170.5" y="39" width="33" height="23"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0₺" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTJ-FC-m6C">
+                                            <rect key="frame" x="165" y="45" width="44" height="41"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="34"/>
                                             <color key="textColor" systemColor="systemGreenColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vvC-5z-j4q">
+                                            <rect key="frame" x="208.5" y="163" width="145.5" height="20.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bakiyemi Yönet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKH-Ue-p6t">
+                                                    <rect key="frame" x="0.0" y="0.0" width="116" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HCV-Ei-NhE">
+                                                    <rect key="frame" x="126" y="2.5" width="19.5" height="15.5"/>
+                                                    <color key="tintColor" systemColor="labelColor"/>
+                                                </imageView>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ELA-4w-QLz" firstAttribute="top" secondItem="lz0-PG-kdK" secondAttribute="top" constant="20" symbolic="YES" id="EBr-On-2bs"/>
-                                        <constraint firstItem="YTJ-FC-m6C" firstAttribute="top" secondItem="ELA-4w-QLz" secondAttribute="bottom" constant="2" id="LoI-hD-Qwl"/>
+                                        <constraint firstAttribute="trailing" secondItem="vvC-5z-j4q" secondAttribute="trailing" constant="20" symbolic="YES" id="KDE-nA-Jwy"/>
+                                        <constraint firstItem="YTJ-FC-m6C" firstAttribute="top" secondItem="ELA-4w-QLz" secondAttribute="bottom" constant="8" symbolic="YES" id="LoI-hD-Qwl"/>
                                         <constraint firstItem="YTJ-FC-m6C" firstAttribute="centerX" secondItem="lz0-PG-kdK" secondAttribute="centerX" id="LwZ-tk-xDM"/>
+                                        <constraint firstAttribute="bottom" secondItem="vvC-5z-j4q" secondAttribute="bottom" constant="16.5" id="XKq-w6-k7X"/>
                                         <constraint firstItem="ELA-4w-QLz" firstAttribute="centerX" secondItem="lz0-PG-kdK" secondAttribute="centerX" id="bHG-Ps-FFz"/>
+                                        <constraint firstItem="vvC-5z-j4q" firstAttribute="top" secondItem="lz0-PG-kdK" secondAttribute="top" constant="163" id="wzq-VZ-Iae"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="balanceLabel" destination="YTJ-FC-m6C" id="VyS-s4-INB"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="billCell" rowHeight="60" id="aBH-Mg-hzl" customClass="BillTableViewCell" customModule="Dude_Money" customModuleProvider="target">
                                 <rect key="frame" x="20" y="249.5" width="374" height="60"/>
@@ -64,8 +85,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1254.56" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNv-2a-QBi">
-                                            <rect key="frame" x="311.5" y="23.5" width="42.5" height="13.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1254.56₺" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNv-2a-QBi">
+                                            <rect key="frame" x="304.5" y="23.5" width="49.5" height="13.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -78,10 +99,17 @@
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nad-NM-7NW">
                                             <rect key="frame" x="20" y="11.5" width="35" height="36"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="35" id="RuG-6I-UK2"/>
                                                 <constraint firstAttribute="width" secondItem="Nad-NM-7NW" secondAttribute="height" multiplier="1:1" id="o8p-f8-tTH"/>
                                             </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="10"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -106,14 +134,69 @@
                             <outlet property="delegate" destination="W8k-Il-sH1" id="0Vg-3i-cK7"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="nkU-5c-nlk" kind="presentation" identifier="addAction" id="jXD-6A-pM4"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wbi-28-mqh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1375.3623188405797" y="1137.7232142857142"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="9go-XV-bUe">
+            <objects>
+                <tableViewController id="nkU-5c-nlk" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="3oK-3k-IpA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="B5h-SR-dCq">
+                                <rect key="frame" x="20" y="49.5" width="374" height="80.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="B5h-SR-dCq" id="3Be-ha-0lV">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="80.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Hello" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zwk-9i-MeG">
+                                            <rect key="frame" x="20" y="20" width="334" height="40.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="AWe-sF-r2V"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Zwk-9i-MeG" firstAttribute="top" secondItem="3Be-ha-0lV" secondAttribute="top" constant="20" symbolic="YES" id="Fkf-73-cJz"/>
+                                        <constraint firstAttribute="bottom" secondItem="Zwk-9i-MeG" secondAttribute="bottom" constant="20" symbolic="YES" id="PT8-2O-eZc"/>
+                                        <constraint firstItem="Zwk-9i-MeG" firstAttribute="leading" secondItem="3Be-ha-0lV" secondAttribute="leading" constant="20" symbolic="YES" id="cCl-hZ-Lde"/>
+                                        <constraint firstAttribute="trailing" secondItem="Zwk-9i-MeG" secondAttribute="trailing" constant="20" symbolic="YES" id="pAN-fD-OkP"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="nkU-5c-nlk" id="hzR-O6-PFZ"/>
+                            <outlet property="delegate" destination="nkU-5c-nlk" id="nge-P6-BoO"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="wbY-EP-FS2"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dDs-TQ-xvJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-567" y="1138"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="arrow.right" catalog="system" width="128" height="98"/>
         <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
