--- a/Dude-Money/Storyboards/Base.lproj/Main.storyboard
+++ b/Dude-Money/Storyboards/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Summary View Controller-->
         <scene sceneID="RCa-Ed-8AC">
             <objects>
-                <viewController storyboardIdentifier="summaryVC" id="WSH-7I-GhJ" customClass="SummaryViewController" customModule="Dude_Money" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SummaryViewController" id="WSH-7I-GhJ" customClass="SummaryViewController" customModule="Dude_Money" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SX5-Zg-QBF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
